<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/splash_background"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="?attr/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="?attr/colorPrimaryDark"
        android:gravity="center_vertical"
        android:paddingLeft="38dp"
        android:paddingStart="38dp"
        android:text="@string/checking_info"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/root_access_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/checking_root" />

            <TextView
                android:id="@+id/busybox_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/searching_busybox" />

            <TextView
                android:id="@+id/info_collect_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/collecting_info" />

        </LinearLayout>

        <ProgressBar
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-7dp"
            android:indeterminate="true" />
    </FrameLayout>

</LinearLayout>
